--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.34.0",
+    "clsx": "^2.1.1",
     "nanoid": "^5.0.9",
     "next": "^14.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
